Fix body being hidden under navbar :bug:

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,14 @@ html {
   line-height: 1.6;
 }
 
-
+body {
+  padding-top: 76px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  overflow-x: hidden;
+}
 
 /* Colors */
 body {
